--- a/Docs/Рамиль Янбердин - декомпозиция (1) (1).md
+++ b/Docs/Рамиль Янбердин - декомпозиция (1) (1).md
@@ -1,12 +1,12 @@
-1. Верстка экрана каталога: 1sp
-2. Верстка таблицы: 1sp
-3. Верстка ячеек: 1sp
-4. Верстка экрана nft: 1sp
-5. Верстка обложки + тайтла + сабтайтла: 1sp
-6. Верстка коллекции: 1sp
-7. Верстка ячейки коллекции: 1sp
-8. Создание и настройка сетевого слоя: 3sp
-9. Прикручивание логики экрана каталога: 2sp
-10. Прикручивание логики экрана nft: 2sp
+1. Верстка экрана каталога: 1 час
+2. Верстка таблицы: 1 час
+3. Верстка ячеек: 1 час
+4. Верстка экрана nft: 1 час
+5. Верстка обложки + тайтла + сабтайтла: 1 час
+6. Верстка коллекции: 1 час
+7. Верстка ячейки коллекции: 1 час
+8. Создание и настройка сетевого слоя: 3 часа
+9. Прикручивание логики экрана каталога: 4 часа
+10. Прикручивание логики экрана nft: 4 часа
 
 
