--- a/Docs/Рамиль Янбердин - декомпозиция (1) (1).md
+++ b/Docs/Рамиль Янбердин - декомпозиция (1) (1).md
@@ -6,9 +6,9 @@
 6. Верстка коллекции: 1 час / Реальное: 1 час
 7. Верстка ячейки коллекции: 1 / Реальное: 40 мин
 
-8. Создание и настройка сетевого слоя: 3 часа
+8. Создание и настройка сетевого слоя: 3 часа / Реальное 4.5 часа
+9. Прикручивание логики экрана каталога: 1 час / Реальное 1 час
 
-9. Прикручивание логики экрана каталога: 4 часа
-10. Прикручивание логики экрана nft: 4 часа
+10. Прикручивание логики экрана nft: 3 часа
 
 
