--- a/Docs/Рамиль Янбердин - декомпозиция (1) (1).md
+++ b/Docs/Рамиль Янбердин - декомпозиция (1) (1).md
@@ -10,6 +10,6 @@
 8. Создание и настройка сетевого слоя: 3 часа / Реальное 4.5 часа
 9. Прикручивание логики экрана каталога: 1 час / Реальное 1 час
 3/3
-10. Прикручивание логики экрана nft: 3 часа
+10. Прикручивание логики экрана nft: 3 часа / Реальное 8 часов
 
 
